--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,7 @@ tasks:
     init: |
       sudo apt-get update && sudo apt-get install -y maven # Ensure Maven is installed
       mvn clean install -DskipTests # Build the project and download dependencies
+      mvn clean install -U
     command: |
       echo "Gitpod setup complete. You can now run tests."
 
